ajout des videos js + modification js exo2

--- a/exo2js.html
+++ b/exo2js.html
@@ -11,7 +11,7 @@
         <body>
             <main>
                 <article>
-                    <div class="carre">
+                    <!-- <div class="carre">
                         <p>1</p>
                     </div>
                     <div class="carre">
@@ -22,7 +22,7 @@
                     </div>
                     <div class="carre">
                         <p>4</p>
-                    </div>
+                    </div> -->
                 </article>
             </main>
             <script src="./js/exo2.js"></script>
