ajout evenement click

--- a/exo3/exo3js.html
+++ b/exo3/exo3js.html
@@ -10,6 +10,9 @@
         </head>
         <body>
             <main>
+                <article>
+                    
+                </article>
             </main>
             <script src="exo3js.js"></script>
         </body>
