ajout de commentaire

--- a/exo5/exo5.html
+++ b/exo5/exo5.html
@@ -13,7 +13,7 @@
             <h1>Valeur en euros</h1>
             <form action="" method="get">
                 <label name="monnaie">Euros</label>
-                <input type="text" name="monnaie" id="euros" oninput="convertir()">
+                <input type="text" name="monnaie" id="euros" oninput="convertir()"> <!-- la fonction convertir() se déclenche lorsqu'on saise une valeur dans le champ input -->
             </form>
             <p id="result"></p>
         </article>
