--- a/exo1js.html
+++ b/exo1js.html
@@ -14,6 +14,8 @@
                     <p>Texte</p>
                 </div>
             </main>
+
+            <article>Bonjour</article>
             <script src="./js/main.js"></script>
         </body>
     </html>
