--- a/exo1js.html
+++ b/exo1js.html
@@ -1,21 +1,21 @@
 <!DOCTYPE html>
-    <html lang="fr">
-        <head>
-            <meta charset="utf-8" />
+<html lang="fr">
+	<head>
+		<meta charset="utf-8" />
 
-            <title>Javascript</title>
+		<title>Javascript</title>
 
-            <link rel="stylesheet" href="css/style.css" />
+		<link rel="stylesheet" href="css/style.css" />
+	</head>
+	<body>
+		<main>
+			<div id="carre">
+				<p>Texte</p>
+			</div>
+		</main>
 
-        </head>
-        <body>
-            <main>
-                <div id="carre">
-                    <p>Texte</p>
-                </div>
-            </main>
-
-            <article>Bonjour</article>
-            <script src="./js/main.js"></script>
-        </body>
-    </html>
+		<article>Bonjour</article>
+		<p>test</p>
+		<script src="./js/main.js"></script>
+	</body>
+</html>
